fix(ui/icon): fix vertical align to bottom
affects: @varlet/ui

--- a/packages/varlet-ui/src/icon/icon.less
+++ b/packages/varlet-ui/src/icon/icon.less
@@ -12,6 +12,7 @@
   align-items: center;
   font-size: var(--icon-size);
   color: inherit;
+  vertical-align: bottom;
 
   &--shrinking {
     transform: scale(0);
